--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "globby": "^13.1.2",
     "vite": "^3.2.3"
   },
   "dependencies": {
